test/parser.d/invalid/module0.surc.bad
module module0 where

main() = do
	print "a module"
